test/spec_vectors/load64/fail/module_23.wat
(module (memory i64 1) (func $load16_u_i64 (i64.load16_u (i64.const 0))))